--- a/notebook/kalimati.ipynb
+++ b/notebook/kalimati.ipynb
@@ -5104,6 +5104,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "python -m pip install \"pymongo[srv]\"==3.6"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 177,
    "metadata": {},
    "outputs": [
@@ -5323,7 +5335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
