forecasting pipe line completed

--- a/notebook/experiment.ipynb
+++ b/notebook/experiment.ipynb
@@ -119,24 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KalimatiException",
-     "evalue": "Error occurred python script name [d:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py] line number [27] error message [Environment key: mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 is not set.]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32md:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py:27\u001b[0m, in \u001b[0;36mMongoDBClient.__init__\u001b[1;34m(self, database_name)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mongo_db_url \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m---> 27\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnvironment key: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mMONGODB_URL_KEY\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not set.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     28\u001b[0m MongoDBClient\u001b[38;5;241m.\u001b[39mclient \u001b[38;5;241m=\u001b[39m pymongo\u001b[38;5;241m.\u001b[39mMongoClient(mongo_db_url, tlsCAFile\u001b[38;5;241m=\u001b[39mca)\n",
-      "\u001b[1;31mException\u001b[0m: Environment key: mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 is not set.",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKalimatiException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkalimati_tarkari\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfiguration\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmongo_db_connection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MongoDBClient\n\u001b[1;32m----> 2\u001b[0m \u001b[43mMongoDBClient\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py:34\u001b[0m, in \u001b[0;36mMongoDBClient.__init__\u001b[1;34m(self, database_name)\u001b[0m\n\u001b[0;32m     32\u001b[0m     logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMongoDB connection succesfull\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 34\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m KalimatiException(e,sys)\n",
-      "\u001b[1;31mKalimatiException\u001b[0m: Error occurred python script name [d:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py] line number [27] error message [Environment key: mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 is not set.]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mongodb+srv://bishw:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<kalimati_tarkari.configuration.mongo_db_connection.MongoDBClient at 0x15e789b6aa0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -146,12 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from kalimati_tarkari.configuration.mongo_db_connection import MongoDBClient\n",
-    "from kalimati_tarkari.constants import DATABASE_NAME\n",
+    "from kalimati_tarkari.constants import DATABASE_NAME,COLLECTION_NAME\n",
     "from kalimati_tarkari.exception import KalimatiException\n",
     "import pandas as pd\n",
     "import sys\n",
@@ -186,6 +187,9 @@
     "                collection = self.mongo_client[database_name][collection_name]\n",
     "\n",
     "            df = pd.DataFrame(list(collection.find()))\n",
+    "            if \"_id\" in df.columns.to_list():\n",
+    "                df = df.drop(columns=[\"_id\"], axis=1)\n",
+    "            df.replace({\"na\":np.nan},inplace=True)\n",
     "            return df\n",
     "        except Exception as e:\n",
     "            raise KalimatiException(e,sys)"
@@ -213,31 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KalimatiException",
-     "evalue": "Error occurred python script name [C:\\Users\\BishwajyotiChaudhary\\AppData\\Local\\Temp\\ipykernel_9596\\2634673060.py] line number [20] error message [Error occurred python script name [d:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py] line number [27] error message [Environment key: mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 is not set.]]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32md:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py:27\u001b[0m, in \u001b[0;36mMongoDBClient.__init__\u001b[1;34m(self, database_name)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mongo_db_url \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m---> 27\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnvironment key: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mMONGODB_URL_KEY\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not set.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     28\u001b[0m MongoDBClient\u001b[38;5;241m.\u001b[39mclient \u001b[38;5;241m=\u001b[39m pymongo\u001b[38;5;241m.\u001b[39mMongoClient(mongo_db_url, tlsCAFile\u001b[38;5;241m=\u001b[39mca)\n",
-      "\u001b[1;31mException\u001b[0m: Environment key: mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 is not set.",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKalimatiException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 20\u001b[0m, in \u001b[0;36mKalimatiData.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 20\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmongo_client \u001b[38;5;241m=\u001b[39m \u001b[43mMongoDBClient\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdatabase_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mDATABASE_NAME\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "File \u001b[1;32md:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py:34\u001b[0m, in \u001b[0;36mMongoDBClient.__init__\u001b[1;34m(self, database_name)\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 34\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m KalimatiException(e,sys)\n",
-      "\u001b[1;31mKalimatiException\u001b[0m: Error occurred python script name [d:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py] line number [27] error message [Environment key: mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 is not set.]",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKalimatiException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m obj \u001b[38;5;241m=\u001b[39m \u001b[43mKalimatiData\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[32], line 22\u001b[0m, in \u001b[0;36mKalimatiData.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmongo_client \u001b[38;5;241m=\u001b[39m MongoDBClient(database_name\u001b[38;5;241m=\u001b[39mDATABASE_NAME)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m---> 22\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m KalimatiException(e,sys)\n",
-      "\u001b[1;31mKalimatiException\u001b[0m: Error occurred python script name [C:\\Users\\BishwajyotiChaudhary\\AppData\\Local\\Temp\\ipykernel_9596\\2634673060.py] line number [20] error message [Error occurred python script name [d:\\unversity\\project\\kalimati-tarkari\\kalimati_tarkari\\configuration\\mongo_db_connection.py] line number [27] error message [Environment key: mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 is not set.]]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "obj = KalimatiData()\n"
    ]
@@ -266,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
