fixing retraining pipeline

--- a/notebook/db_connection.ipynb
+++ b/notebook/db_connection.ipynb
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
        "'Bismuth%40123'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,9 +1917,85 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CONNECTION_URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pymongo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from urllib.parse import quote_plus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "username = os.getenv('username')\n",
+    "password = os.getenv('password')\n",
+    "\n",
+    "# Escape the username and password according to RFC 3986\n",
+    "escaped_username = quote_plus(username)\n",
+    "escaped_password = quote_plus(password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bishwajyotichaudhary46'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "escaped_username"
    ]
   },
   {
@@ -1928,15 +2004,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = pymongo.MongoClient(CONNECTION_URL)\n",
-    "data_base = client[DB_NAME]\n",
-    "collection = data_base[COLLECTION_NAME]\n",
-    "rec = collection.insert_many(data) "
+    "os.chdir('../')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'f:\\\\Unversity\\\\Project\\\\TimeSeries\\\\Kalimati-tarkari'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kalimati_tarkari.constants import COLLECTION_NAME,MONGODB_URL_KEY, DATABASE_NAME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mongodb+srv://bishwajyotichaudhary46:Bismuth%40123@cluster0.tofa7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MONGODB_URL_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = pymongo.MongoClient(MONGODB_URL_KEY)\n",
+    "data_base = client[DATABASE_NAME]\n",
+    "collection = data_base[COLLECTION_NAME]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1968,31 +2108,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>66f99402fb38d4c81397d5ff</td>\n",
+       "      <td>672f7d550651d64efce7769c</td>\n",
        "      <td>04/15/2013</td>\n",
        "      <td>रू १५.००</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>66f99402fb38d4c81397d600</td>\n",
+       "      <td>672f7d550651d64efce7769d</td>\n",
        "      <td>04/16/2013</td>\n",
        "      <td>रू १७.००</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>66f99402fb38d4c81397d601</td>\n",
+       "      <td>672f7d550651d64efce7769e</td>\n",
        "      <td>04/17/2013</td>\n",
        "      <td>रू १८.००</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>66f99402fb38d4c81397d602</td>\n",
+       "      <td>672f7d550651d64efce7769f</td>\n",
        "      <td>04/18/2013</td>\n",
        "      <td>रू १९.००</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>66f99402fb38d4c81397d603</td>\n",
+       "      <td>672f7d550651d64efce776a0</td>\n",
        "      <td>04/21/2013</td>\n",
        "      <td>रू १९.००</td>\n",
        "    </tr>\n",
@@ -2003,58 +2143,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4004</th>\n",
-       "      <td>66f99402fb38d4c81397e5a3</td>\n",
-       "      <td>09/25/2024</td>\n",
+       "      <th>4045</th>\n",
+       "      <td>672f7d550651d64efce78669</td>\n",
+       "      <td>11/05/2024</td>\n",
+       "      <td>रू ८७.६७</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4046</th>\n",
+       "      <td>672f7d550651d64efce7866a</td>\n",
+       "      <td>11/06/2024</td>\n",
+       "      <td>रू ७७.६७</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4047</th>\n",
+       "      <td>672f7d550651d64efce7866b</td>\n",
+       "      <td>11/07/2024</td>\n",
+       "      <td>रू ७७.६७</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4048</th>\n",
+       "      <td>672f7d550651d64efce7866c</td>\n",
+       "      <td>11/08/2024</td>\n",
+       "      <td>रू ८३.००</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4049</th>\n",
+       "      <td>672f7d550651d64efce7866d</td>\n",
+       "      <td>11/09/2024</td>\n",
        "      <td>रू ७९.००</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4005</th>\n",
-       "      <td>66f99402fb38d4c81397e5a4</td>\n",
-       "      <td>09/26/2024</td>\n",
-       "      <td>रू ८०.००</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4006</th>\n",
-       "      <td>66f99402fb38d4c81397e5a5</td>\n",
-       "      <td>09/27/2024</td>\n",
-       "      <td>रू ७७.६७</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4007</th>\n",
-       "      <td>66f99402fb38d4c81397e5a6</td>\n",
-       "      <td>09/28/2024</td>\n",
-       "      <td>रू ७७.६७</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4008</th>\n",
-       "      <td>66f99402fb38d4c81397e5a7</td>\n",
-       "      <td>09/29/2024</td>\n",
-       "      <td>रू ७८.३३</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4009 rows × 3 columns</p>\n",
+       "<p>4050 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                           _id        Date   Average\n",
-       "0     66f99402fb38d4c81397d5ff  04/15/2013  रू १५.००\n",
-       "1     66f99402fb38d4c81397d600  04/16/2013  रू १७.००\n",
-       "2     66f99402fb38d4c81397d601  04/17/2013  रू १८.००\n",
-       "3     66f99402fb38d4c81397d602  04/18/2013  रू १९.००\n",
-       "4     66f99402fb38d4c81397d603  04/21/2013  रू १९.००\n",
+       "0     672f7d550651d64efce7769c  04/15/2013  रू १५.००\n",
+       "1     672f7d550651d64efce7769d  04/16/2013  रू १७.००\n",
+       "2     672f7d550651d64efce7769e  04/17/2013  रू १८.००\n",
+       "3     672f7d550651d64efce7769f  04/18/2013  रू १९.००\n",
+       "4     672f7d550651d64efce776a0  04/21/2013  रू १९.००\n",
        "...                        ...         ...       ...\n",
-       "4004  66f99402fb38d4c81397e5a3  09/25/2024  रू ७९.००\n",
-       "4005  66f99402fb38d4c81397e5a4  09/26/2024  रू ८०.००\n",
-       "4006  66f99402fb38d4c81397e5a5  09/27/2024  रू ७७.६७\n",
-       "4007  66f99402fb38d4c81397e5a6  09/28/2024  रू ७७.६७\n",
-       "4008  66f99402fb38d4c81397e5a7  09/29/2024  रू ७८.३३\n",
+       "4045  672f7d550651d64efce78669  11/05/2024  रू ८७.६७\n",
+       "4046  672f7d550651d64efce7866a  11/06/2024  रू ७७.६७\n",
+       "4047  672f7d550651d64efce7866b  11/07/2024  रू ७७.६७\n",
+       "4048  672f7d550651d64efce7866c  11/08/2024  रू ८३.००\n",
+       "4049  672f7d550651d64efce7866d  11/09/2024  रू ७९.००\n",
        "\n",
-       "[4009 rows x 3 columns]"
+       "[4050 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
