--- a/notebook/stage_01_data_ingestion.ipynb
+++ b/notebook/stage_01_data_ingestion.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from kalimati_tarkari.config import mongo_db_connection\n"
+    "from kalimati_tarkari.config import mongo_db_connection"
    ]
   },
   {
